--- a/assets/events.toml
+++ b/assets/events.toml
@@ -1,92 +1,92 @@
-"13.787 млрд лет назад" = "Big Bang"
-# "13.6 млрд лет назад" = "First confimed star, SMSS J0313−6708"
-"11 млрд лет назад" = "Milky Way merges with the Kraken (Recent hypothesis)"
-"9.8 млрд лет назад" = "Andromeda Galaxy forms from a galactic merger"
-"6.9 млрд лет назад" = "Arcturus forms"
-"4.6 млрд лет назад" = "Formation and evolution of the Solar System"
-# "4.54 млрд лет назад" = "Earth is formed"
-# "4.5 млрд лет назад" = "Theia impacts Earth, forming the Moon"
-"4.1 млрд лет назад" = "Earliest known life forms"
-"3.5 млрд лет назад" = "Hypothesised last universal ancestor (of bacteria and archaea)"
-"2.9 млрд лет назад" = "Pongola glaciation"
-# "2.5 млрд лет назад" = "Huronian glaciation"
-"2.460 млрд лет назад" = "Great Oxidation Event, likely causing the Huronian Glaciation"
-# "2.2 млрд лет назад" = "Huronian glaciation ends"
-"2.1 млрд лет назад" = "Earliest eukaryote fossils"
+"13.787 млрд лет" = "Big Bang"
+# "13.6 млрд лет" = "First confimed star, SMSS J0313−6708"
+"11 млрд лет" = "Milky Way merges with the Kraken (Recent hypothesis)"
+"9.8 млрд лет" = "Andromeda Galaxy forms from a galactic merger"
+"6.9 млрд лет" = "Arcturus forms"
+"4.6 млрд лет" = "Formation and evolution of the Solar System"
+# "4.54 млрд лет" = "Earth is formed"
+# "4.5 млрд лет" = "Theia impacts Earth, forming the Moon"
+"4.1 млрд лет" = "Earliest known life forms"
+"3.5 млрд лет" = "Hypothesised last universal ancestor (of bacteria and archaea)"
+"2.9 млрд лет" = "Pongola glaciation"
+# "2.5 млрд лет" = "Huronian glaciation"
+"2.460 млрд лет" = "Great Oxidation Event, likely causing the Huronian Glaciation"
+# "2.2 млрд лет" = "Huronian glaciation ends"
+"2.1 млрд лет" = "Earliest eukaryote fossils"
 
 # https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1689654/
-"1.576 млрд лет назад" = "Plants, animals, and fungi diverge"
+"1.576 млрд лет" = "Plants, animals, and fungi diverge"
 
-"1.26 млрд лет назад" = "Rodinia starts to form"
-"830 млн лет назад" = "First rifts on Rodinia, starting to break apart"
-"760 млн лет назад" = "First Animalia"
-# "717 млн лет назад" = "Sturtian glaciation begins"
-"650 млн лет назад" = "Pannotia forms"
-# "560 млн лет назад" = "Pannotia breaks up"
-"538.8 млн лет назад" = "Cambrian explosion"
-# "440 млн лет назад" = "Andean-Saharan glaciation" # 460-420
-"445 млн лет назад" = "Late Ordovician mass extinction caused by Andean-Saharan glaciation"
-"372 млн лет назад" = "Late Devonian extinction"
-# "360 млн лет назад" = "Late Paleozoic icehouse begins"
-"335 млн лет назад" = "Pangaea forms"
-"312 млн лет назад" = "Basal amniotes (ancestors of reptiles and mammals)"
-# "259 млн лет назад" = "Capitanian mass extinction event"
-# "255 млн лет назад" = "Late Paleozoic icehouse ends"
-"251.9 млн лет назад" = "Permian–Triassic extinction event, aka the \"Great Dying\""
-"233.23 млн лет назад" = "First dinosaurs" # between 243 and 233.23
-"201.4 млн лет назад" = "Triassic–Jurassic extinction event, caused by Central Atlantic magmatic province"
-"180 млн лет назад" = "Pangaea splits into Laurasia and Gondwana"
-"155 млн лет назад" = "Earliest avialans (Archaeopteryx), ancestors of birds"
-"130 млн лет назад" = "Earliest angiosperms (flowering plants)"
-"90 млн лет назад" = "India separates from Madagascar"
-# "66.25 млн лет назад" = "Deccan Traps"
-"66.043 млн лет назад" = "Cretaceous–Paleogene extinction event, non-avian dinosaurs are extinct"
-"55 млн лет назад" = "Laurasia splits into Laurentia and Eurasia" # actually 60–55
-"35 млн лет назад" = "India begins to collide with Asia"
-"25 млн лет назад" = "Apes diverge from the Old World monkeys"
-"18 млн лет назад" = "Great apes diverge from gibbons"
-"16 млн лет назад" = "Iceland forms" # actually 18-16
-"14 млн лет назад" = "Hominins diverge from orangutans (Pongo)"
-"7 млн лет назад" = "Hominini diverge from gorillas (Gorilla)"
-"5 млн лет назад" = "Humans diverge from chimpanzees (Pan)" # actually 3-5
-"4.2 млн лет назад" = "Earliest Australopithecus"
-"3.4 млн лет назад" = "Earliest stone tools"
-"2.75 млн лет назад" = "LD 350-1, earliest known specimen of genus Homo"
-"2.12 млн лет назад" = "Out of Africa I - human presence in China"
-"1.8 млн лет назад" = "Oldest known human skeletal remains outside of Africa (Homo erectus)"
-"1 млн лет назад" = "Homo antecessor, last common ancestor of modern humans and Neanderthals" # 1.2 - 0.8 млн лет назад
-"0.7 млн лет назад" = "Last reversal of the Earth's magnetic field"
-# "430 тыс. лет назад" = "Earliest Neanderthals (rough date)"
-"450 тыс. лет назад" = "Elster glaciation" # 500-400
-"408 тыс. лет назад" = "Holstein interglacial" # 421-395
-# "300 тыс. лет назад" = "Levallois technique of knapping used by Neanderthals in Europe"
-"285 тыс. лет назад" = "Earliest Denisovans"
-"250 тыс. лет назад" = "Out of Africa II - Homo sapiens" # 300-200 тыс. лет назад
-"194 тыс. лет назад" = "Penultimate Glacial Period"
-"160 тыс. лет назад" = "Mousterian (Neanderthal) culture in Europe"
-# "150 тыс. лет назад" = "Peopling of Africa, Khoisan mtDNA haplogroup first to differentiate"
-"135 тыс. лет назад" = "Penultimate Glacial Period ends"
-"125 тыс. лет назад" = "Last Interglacial Period, aka the Eemian" # 130-115 тыс. лет назад
-"108 тыс. лет назад" = "The last known population of Homo erectus on Java goes extinct"
-"74 тыс. лет назад" = "Toba eruption, which may have caused a genetic bottleneck in humans"
-"65 тыс. лет назад" = "Human migrations reach Australia"
-"52 тыс. лет назад" = "Latest remains of Denisovans"
-"40 тыс. лет назад" = "Neanderthal extinction"
-"26.5 тыс. лет назад" = "Last Glacial Maximum"
-"22 тыс. лет назад" = "Last unified archaeological culture in Europe (Gravettian culture) splits"
-# "25 тыс. лет назад" = "Oldest permanent human settlement (at Dolní Věstonice)"
-"20 тыс. лет назад" = "Last Glacial Maximum ends"
-"17 тыс. лет назад" = "Human migration to the Americas" # though estimates range from 15k to (newer estimate) 25k
-"14.6 тыс. лет назад" = "African humid period begins"
-"12.9 тыс. лет назад" = "Younger Dryas begins"
-"11.7 тыс. лет назад" = "Younger Dryas ends"
-"10.5 тыс. лет назад" = "Cattle domesticated"
-"8.2 тыс. лет назад" = "8.2-kiloyear event (sudden cooling)"
-# "5.5 тыс. лет назад" = "African humid period ends"
+"1.26 млрд лет" = "Rodinia starts to form"
+"830 млн лет" = "First rifts on Rodinia, starting to break apart"
+"760 млн лет" = "First Animalia"
+# "717 млн лет" = "Sturtian glaciation begins"
+"650 млн лет" = "Pannotia forms"
+# "560 млн лет" = "Pannotia breaks up"
+"538.8 млн лет" = "Cambrian explosion"
+# "440 млн лет" = "Andean-Saharan glaciation" # 460-420
+"445 млн лет" = "Late Ordovician mass extinction caused by Andean-Saharan glaciation"
+"372 млн лет" = "Late Devonian extinction"
+# "360 млн лет" = "Late Paleozoic icehouse begins"
+"335 млн лет" = "Pangaea forms"
+"312 млн лет" = "Basal amniotes (ancestors of reptiles and mammals)"
+# "259 млн лет" = "Capitanian mass extinction event"
+# "255 млн лет" = "Late Paleozoic icehouse ends"
+"251.9 млн лет" = "Permian–Triassic extinction event, aka the \"Great Dying\""
+"233.23 млн лет" = "First dinosaurs" # between 243 and 233.23
+"201.4 млн лет" = "Triassic–Jurassic extinction event, caused by Central Atlantic magmatic province"
+"180 млн лет" = "Pangaea splits into Laurasia and Gondwana"
+"155 млн лет" = "Earliest avialans (Archaeopteryx), ancestors of birds"
+"130 млн лет" = "Earliest angiosperms (flowering plants)"
+"90 млн лет" = "India separates from Madagascar"
+# "66.25 млн лет" = "Deccan Traps"
+"66.043 млн лет" = "Cretaceous–Paleogene extinction event, non-avian dinosaurs are extinct"
+"55 млн лет" = "Laurasia splits into Laurentia and Eurasia" # actually 60–55
+"35 млн лет" = "India begins to collide with Asia"
+"25 млн лет" = "Apes diverge from the Old World monkeys"
+"18 млн лет" = "Great apes diverge from gibbons"
+"16 млн лет" = "Iceland forms" # actually 18-16
+"14 млн лет" = "Hominins diverge from orangutans (Pongo)"
+"7 млн лет" = "Hominini diverge from gorillas (Gorilla)"
+"5 млн лет" = "Humans diverge from chimpanzees (Pan)" # actually 3-5
+"4.2 млн лет" = "Earliest Australopithecus"
+"3.4 млн лет" = "Earliest stone tools"
+"2.75 млн лет" = "LD 350-1, earliest known specimen of genus Homo"
+"2.12 млн лет" = "Out of Africa I - human presence in China"
+"1.8 млн лет" = "Oldest known human skeletal remains outside of Africa (Homo erectus)"
+"1 млн лет" = "Homo antecessor, last common ancestor of modern humans and Neanderthals" # 1.2 - 0.8 млн лет
+"0.7 млн лет" = "Last reversal of the Earth's magnetic field"
+# "430 тыс. лет" = "Earliest Neanderthals (rough date)"
+"450 тыс. лет" = "Elster glaciation" # 500-400
+"408 тыс. лет" = "Holstein interglacial" # 421-395
+# "300 тыс. лет" = "Levallois technique of knapping used by Neanderthals in Europe"
+"285 тыс. лет" = "Earliest Denisovans"
+"250 тыс. лет" = "Out of Africa II - Homo sapiens" # 300-200 тыс. лет
+"194 тыс. лет" = "Penultimate Glacial Period"
+"160 тыс. лет" = "Mousterian (Neanderthal) culture in Europe"
+# "150 тыс. лет" = "Peopling of Africa, Khoisan mtDNA haplogroup first to differentiate"
+"135 тыс. лет" = "Penultimate Glacial Period ends"
+"125 тыс. лет" = "Last Interglacial Period, aka the Eemian" # 130-115 тыс. лет
+"108 тыс. лет" = "The last known population of Homo erectus on Java goes extinct"
+"74 тыс. лет" = "Toba eruption, which may have caused a genetic bottleneck in humans"
+"65 тыс. лет" = "Human migrations reach Australia"
+"52 тыс. лет" = "Latest remains of Denisovans"
+"40 тыс. лет" = "Neanderthal extinction"
+"26.5 тыс. лет" = "Last Glacial Maximum"
+"22 тыс. лет" = "Last unified archaeological culture in Europe (Gravettian culture) splits"
+# "25 тыс. лет" = "Oldest permanent human settlement (at Dolní Věstonice)"
+"20 тыс. лет" = "Last Glacial Maximum ends"
+"17 тыс. лет" = "Human migration to the Americas" # though estimates range from 15k to (newer estimate) 25k
+"14.6 тыс. лет" = "African humid period begins"
+"12.9 тыс. лет" = "Younger Dryas begins"
+"11.7 тыс. лет" = "Younger Dryas ends"
+"10.5 тыс. лет" = "Cattle domesticated"
+"8.2 тыс. лет" = "8.2-kiloyear event (sudden cooling)"
+# "5.5 тыс. лет" = "African humid period ends"
 "3500 до н.э." = "First cuneiform; african humid period ends; horse domesticated; PIE spoken"
 # "3250 до н.э." = "First hieroglyphics"
 "2600 до н.э." = "Great Pyramid of Giza"
-"4.2 тыс. лет назад" = "4.2-kiloyear event (sudden aridification)"
+"4.2 тыс. лет" = "4.2-kiloyear event (sudden aridification)"
 "1750 до н.э." = "Code of Hammurabi"
 "1200 до н.э." = "Late Bronze Age collapse"
 "550 до н.э." = "Achaemenid Empire under Cyrus the Great"
